@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Ensure mapwmslayer.c does not unlink file before closing connection on it (#3451)
+
 - Fix security exception issue in C# with MSVC2010 (#3438)
 
 - Write out join CONNECTIONTYPE when saving a mapfile. (#3435)
